--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,22 +1,20 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+stages:
+ # build
+ - test
+ - deploy
 
-trigger:
-- master
+test:
+  image: python:3-alpine
+  stage: test
+  script:
+   - python -m unittest tests
 
-pool:
-  vmImage: 'ubuntu-latest'
-
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
-  
-- script: python3 -m unittest tests.py
-  displayName: 'Run unittests'
+deploy:
+  image: python:3-alpine
+  stage: deploy
+  script:
+   - python microblog.py
+  after_script:
+   - echo "I do something after_script"
+  only:
+   - master
