--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,6 @@ jobs:
   - task: UsePythonVersion@0
     inputs:
       versionSpec: '$(python.version)'
-  - task: Run Unittests
+  - task: RunUnittests@0
     inputs:
       script: python /src/tests.py
