--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,5 +14,10 @@ jobs:
   steps:
   - task: UsePythonVersion@0
     inputs:
-      versionSpec: '3.6'
+      versionSpec: '$(python.version)'
+  - script: python -m pip install --upgrade pip setuptools wheel
+    displayName: 'Install tools'    
+  - script: pip install -r requirements.txt
+    displayName: 'Install requirements'  
   - script: python tests.py
+    displayName: 'Run Unittests'
