--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ aiodns==2.0.0
 aiohttp==3.6.2
 aioredis==1.3.1
 ajpy==0.0.4
-alembic==1.0.11.dev0
+alembic==1.0.11
 aniso8601==8.0.0
 APScheduler==0.0.0
 asn1crypto==0.24.0
