Update azure-pipelines.yml for Azure Pipelines
trying to sync changes made outside of azure

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,3 +21,10 @@ jobs:
     displayName: 'Install requirements'  
   - script: python tests.py
     displayName: 'Run Unittests'
+  - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
+    clean: false  # whether to fetch clean each time
+    fetchDepth: 10  # the depth of commits to ask Git to fetch
+    lfs: false  # whether to download Git-LFS files
+    submodules: true # set to 'true' for a single level of submodules or 'recursive' to get submodules of submodules
+    path: \_work\1  # path to check out source code, relative to the agent's build directory (e.g. \_work\1)
+    persistCredentials: true  # set to 'true' to leave the OAuth token in the Git config after the initial fetch
