--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,67 @@
 alembic==0.9.6
+alpha-vantage==2.1.2
+altgraph==0.16.1
+astroid==2.3.3
 Babel==2.5.1
 blinker==1.4
 certifi==2017.7.27.1
+cffi==1.14.0
 chardet==3.0.4
 click==6.7
+colorama==0.4.3
+cryptography==2.8
+cycler==0.10.0
 dominate==2.3.1
+fbs==0.8.4
 Flask==1.0.2
 Flask-Babel==0.11.2
 Flask-Bootstrap==3.3.7.1
+Flask-Email==1.4.4
 Flask-Login==0.4.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
 Flask-Moment==0.5.2
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
-guess_language-spirit==0.5.3
+future==0.18.2
+guess-language-spirit==0.5.3
 idna==2.6
+isort==4.3.21
 itsdangerous==0.24
 Jinja2==2.10.1
+jwt==0.6.1
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.3
 Mako==1.0.7
 MarkupSafe==1.0
+matplotlib==3.1.2
+mccabe==0.6.1
+numpy==1.18.1
+pandas==0.25.3
+pefile==2019.4.18
+php==1.2.0
+pycparser==2.20
+PyInstaller==3.5
 PyJWT==1.5.3
+pylint==2.4.4
+pyparsing==2.4.6
+PyQt5==5.9.2
+PyQt5-sip==12.7.0
 python-dateutil==2.6.1
 python-dotenv==0.7.1
 python-editor==1.0.3
 pytz==2017.2
+pywin32-ctypes==0.2.0
 requests==2.20.0
+sentry-sdk==0.13.5
+simplejson==3.17.0
+sip==4.19.8
 six==1.11.0
 SQLAlchemy==1.3.0
+typed-ast==1.4.1
 urllib3==1.24.2
 visitor==0.1.3
 Werkzeug==0.15.3
+wrapt==1.11.2
 WTForms==2.1
+yahoo-finance==1.4.0
